# tcli

./: .gitignore  MPP_PAYMENT_CREDENTIAL_AND_RECEIPT_NOTES.md  PAY_AUTHORIZATION_AND_OAUTH_DEVICE_API.md  ToDo.v2.md  agentic-mpp-requirements-and-api.md  install.sh  openwebui-tcli-media-bridge.md
.github/workflows/: release.yml
.openclaw/workspace/tcli-login/1776326648908621000-68329/: result.json
.tcli-sandbox-home/: device_sn
.tcli-sandbox-home/wallet/: .device_login_poll.json
.tcli-sandbox-home/workspace/tcli-login/1776327150827351000-69428/: result.json
.tcli-test-home/: device_sn
demo/: openclaw_media_sidecar.py  pyproject.toml  start-sidecar.sh
mock_backend/auth_service/: main.py  pyproject.toml
scripts/: build.sh  cargo.sh  dev-wallet-login.sh  install.sh  start-openwebui-media-bridge.sh  tcliup  test-payment.sh  test-with-mock.sh
tcli/: Cargo.toml  INTEGRATION.md
tcli/src/: agentic_mpp.rs  api.rs  auth.rs  browser_popup.rs  cli.rs  config.rs  config_file.rs  lib.rs  main.rs  oauth_http.rs  storage.rs  tempo_reference.rs  wallet_cmd.rs  x402.rs
tcli/tests/: phase1_help.rs  phase2_device.rs  phase3_config.rs  phase4_402.rs
tcli/tests/common/: mod.rs
