[package]
name = "tcli"
version = "0.1.0"
edition = "2021"
description = "Tempo-style CLI for agent orchestration (wallet + HTTP request with 402 handling)"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"
indicatif = "0.17"
toml = "0.8"
dirs = "5"
thiserror = "1"
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"

[[bin]]
name = "tcli"
path = "src/main.rs"
